lab1/lab1-testsuite/lab1-test-dir/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCpp.y
-----------------------------------------------------------------------------

state 38 contains 1 shift/reduce conflicts.
state 267 contains 1 shift/reduce conflicts.
state 270 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListStm -> ListStm                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pIDecl -> IDecl                             (6)
	%start_pListIDecl -> ListIDecl                     (7)
	%start_pDecl -> Decl                               (8)
	%start_pStm -> Stm                                 (9)
	%start_pExp16 -> Exp16                             (10)
	%start_pExp15 -> Exp15                             (11)
	%start_pExp14 -> Exp14                             (12)
	%start_pExp13 -> Exp13                             (13)
	%start_pExp12 -> Exp12                             (14)
	%start_pExp11 -> Exp11                             (15)
	%start_pExp10 -> Exp10                             (16)
	%start_pExp9 -> Exp9                               (17)
	%start_pExp8 -> Exp8                               (18)
	%start_pExp4 -> Exp4                               (19)
	%start_pExp3 -> Exp3                               (20)
	%start_pExp2 -> Exp2                               (21)
	%start_pExp1 -> Exp1                               (22)
	%start_pExp -> Exp                                 (23)
	%start_pExp5 -> Exp5                               (24)
	%start_pExp6 -> Exp6                               (25)
	%start_pExp7 -> Exp7                               (26)
	%start_pListExp -> ListExp                         (27)
	%start_pListString -> ListString                   (28)
	%start_pListId -> ListId                           (29)
	%start_pType -> Type                               (30)
	%start_pTypes -> Types                             (31)
	%start_pQualifiedConstElem -> QualifiedConstElem   (32)
	%start_pListTypes -> ListTypes                     (33)
	%start_pQualifiedConstant -> QualifiedConstant     (34)
	%start_pListQualifiedConstElem -> ListQualifiedConstElem   (35)
	Integer -> L_integ                                 (36)
	Double -> L_doubl                                  (37)
	Char -> L_charac                                   (38)
	String -> L_quoted                                 (39)
	Id -> L_Id                                         (40)
	Program -> ListDef                                 (41)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (42)
	Def -> Type Id '(' ListArg ')' ';'                 (43)
	Def -> 'using' QualifiedConstant ';'               (44)
	Def -> 'typedef' Type Id ';'                       (45)
	Def -> Decl ';'                                    (46)
	ListDef ->                                         (47)
	ListDef -> ListDef Def                             (48)
	ListArg ->                                         (49)
	ListArg -> Arg                                     (50)
	ListArg -> Arg ',' ListArg                         (51)
	ListStm ->                                         (52)
	ListStm -> ListStm Stm                             (53)
	Arg -> Type                                        (54)
	Arg -> Type Id                                     (55)
	Arg -> 'const' Type Id                             (56)
	Arg -> 'const' Type                                (57)
	Arg -> 'const' Type Id '=' Exp                     (58)
	Arg -> Type Id '=' Exp                             (59)
	IDecl -> Id                                        (60)
	IDecl -> Id '=' Exp                                (61)
	ListIDecl -> IDecl                                 (62)
	ListIDecl -> IDecl ',' ListIDecl                   (63)
	Decl -> 'const' Type ListIDecl                     (64)
	Decl -> Type ListIDecl                             (65)
	Stm -> 'typedef' Type Id ';'                       (66)
	Stm -> Exp ';'                                     (67)
	Stm -> Decl ';'                                    (68)
	Stm -> 'return' Exp ';'                            (69)
	Stm -> 'while' '(' Exp ')' Stm                     (70)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (71)
	Stm -> '{' ListStm '}'                             (72)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (73)
	Stm -> 'if' '(' Exp ')' Stm                        (74)
	Stm -> 'for' '(' Decl ';' Exp ';' Exp ')' Stm      (75)
	Stm -> 'const' Type Id '=' Exp ';'                 (76)
	Exp16 -> QualifiedConstant                         (77)
	Exp16 -> ListString                                (78)
	Exp16 -> Integer                                   (79)
	Exp16 -> Double                                    (80)
	Exp16 -> 'true'                                    (81)
	Exp16 -> Char                                      (82)
	Exp16 -> 'false'                                   (83)
	Exp16 -> '(' Exp ')'                               (84)
	Exp15 -> Exp15 '[' Exp ']'                         (85)
	Exp15 -> Exp15 '(' ListExp ')'                     (86)
	Exp15 -> Exp16                                     (87)
	Exp14 -> Exp14 '.' Exp15                           (88)
	Exp14 -> Exp14 '++'                                (89)
	Exp14 -> Exp14 '--'                                (90)
	Exp14 -> Exp14 '->' Exp15                          (91)
	Exp14 -> Exp15                                     (92)
	Exp13 -> '!' Exp13                                 (93)
	Exp13 -> '*' Exp13                                 (94)
	Exp13 -> '++' Exp13                                (95)
	Exp13 -> '--' Exp13                                (96)
	Exp13 -> Exp14                                     (97)
	Exp12 -> Exp12 '*' Exp13                           (98)
	Exp12 -> Exp12 '/' Exp13                           (99)
	Exp12 -> Exp12 '%' Exp13                           (100)
	Exp12 -> Exp13                                     (101)
	Exp11 -> Exp11 '+' Exp12                           (102)
	Exp11 -> Exp11 '-' Exp12                           (103)
	Exp11 -> Exp12                                     (104)
	Exp10 -> Exp10 '<<' Exp11                          (105)
	Exp10 -> Exp10 '>>' Exp11                          (106)
	Exp10 -> Exp11                                     (107)
	Exp9 -> Exp9 '<' Exp10                             (108)
	Exp9 -> Exp9 '>' Exp10                             (109)
	Exp9 -> Exp9 '<=' Exp10                            (110)
	Exp9 -> Exp9 '>=' Exp10                            (111)
	Exp9 -> Exp10                                      (112)
	Exp8 -> Exp8 '==' Exp9                             (113)
	Exp8 -> Exp8 '!=' Exp9                             (114)
	Exp8 -> Exp9                                       (115)
	Exp4 -> Exp4 '&&' Exp5                             (116)
	Exp4 -> Exp5                                       (117)
	Exp3 -> Exp3 '||' Exp4                             (118)
	Exp3 -> Exp3 '=' Exp4                              (119)
	Exp3 -> Exp4                                       (120)
	Exp2 -> Exp3 '-=' Exp2                             (121)
	Exp2 -> Exp3 '+=' Exp2                             (122)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (123)
	Exp2 -> Exp3                                       (124)
	Exp1 -> 'throw' Exp1                               (125)
	Exp1 -> Exp2                                       (126)
	Exp -> Exp1                                        (127)
	Exp5 -> Exp6                                       (128)
	Exp6 -> Exp7                                       (129)
	Exp7 -> Exp8                                       (130)
	ListExp ->                                         (131)
	ListExp -> Exp                                     (132)
	ListExp -> Exp ',' ListExp                         (133)
	ListString -> String                               (134)
	ListString -> String ListString                    (135)
	ListId -> Id                                       (136)
	ListId -> Id ',' ListId                            (137)
	Type -> 'bool'                                     (138)
	Type -> 'double'                                   (139)
	Type -> 'float'                                    (140)
	Type -> 'int'                                      (141)
	Type -> 'void'                                     (142)
	Type -> 'char'                                     (143)
	Type -> QualifiedConstant                          (144)
	Type -> Type '&'                                   (145)
	Types -> Type                                      (146)
	QualifiedConstElem -> Id                           (147)
	QualifiedConstElem -> Id '<' ListTypes '>'         (148)
	ListTypes -> Types                                 (149)
	ListTypes -> Types ',' ListTypes                   (150)
	QualifiedConstant -> ListQualifiedConstElem        (151)
	ListQualifiedConstElem -> QualifiedConstElem       (152)
	ListQualifiedConstElem -> QualifiedConstElem '::' ListQualifiedConstElem   (153)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'char'         { PT _ (TS _ 34) }
	'const'        { PT _ (TS _ 35) }
	'do'           { PT _ (TS _ 36) }
	'double'       { PT _ (TS _ 37) }
	'else'         { PT _ (TS _ 38) }
	'false'        { PT _ (TS _ 39) }
	'float'        { PT _ (TS _ 40) }
	'for'          { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'int'          { PT _ (TS _ 43) }
	'return'       { PT _ (TS _ 44) }
	'throw'        { PT _ (TS _ 45) }
	'true'         { PT _ (TS _ 46) }
	'typedef'      { PT _ (TS _ 47) }
	'using'        { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'||'           { PT _ (TS _ 52) }
	'}'            { PT _ (TS _ 53) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pListArg rule  3
	%start_pListStm rule  4
	%start_pArg     rule  5
	%start_pIDecl   rule  6
	%start_pListIDecl rule  7
	%start_pDecl    rule  8
	%start_pStm     rule  9
	%start_pExp16   rule  10
	%start_pExp15   rule  11
	%start_pExp14   rule  12
	%start_pExp13   rule  13
	%start_pExp12   rule  14
	%start_pExp11   rule  15
	%start_pExp10   rule  16
	%start_pExp9    rule  17
	%start_pExp8    rule  18
	%start_pExp4    rule  19
	%start_pExp3    rule  20
	%start_pExp2    rule  21
	%start_pExp1    rule  22
	%start_pExp     rule  23
	%start_pExp5    rule  24
	%start_pExp6    rule  25
	%start_pExp7    rule  26
	%start_pListExp rule  27
	%start_pListString rule  28
	%start_pListId  rule  29
	%start_pType    rule  30
	%start_pTypes   rule  31
	%start_pQualifiedConstElem rule  32
	%start_pListTypes rule  33
	%start_pQualifiedConstant rule  34
	%start_pListQualifiedConstElem rule  35
	Integer         rule  36
	Double          rule  37
	Char            rule  38
	String          rule  39
	Id              rule  40
	Program         rule  41
	Def             rules 42, 43, 44, 45, 46
	ListDef         rules 47, 48
	ListArg         rules 49, 50, 51
	ListStm         rules 52, 53
	Arg             rules 54, 55, 56, 57, 58, 59
	IDecl           rules 60, 61
	ListIDecl       rules 62, 63
	Decl            rules 64, 65
	Stm             rules 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76
	Exp16           rules 77, 78, 79, 80, 81, 82, 83, 84
	Exp15           rules 85, 86, 87
	Exp14           rules 88, 89, 90, 91, 92
	Exp13           rules 93, 94, 95, 96, 97
	Exp12           rules 98, 99, 100, 101
	Exp11           rules 102, 103, 104
	Exp10           rules 105, 106, 107
	Exp9            rules 108, 109, 110, 111, 112
	Exp8            rules 113, 114, 115
	Exp4            rules 116, 117
	Exp3            rules 118, 119, 120
	Exp2            rules 121, 122, 123, 124
	Exp1            rules 125, 126
	Exp             rule  127
	Exp5            rule  128
	Exp6            rule  129
	Exp7            rule  130
	ListExp         rules 131, 132, 133
	ListString      rules 134, 135
	ListId          rules 136, 137
	Type            rules 138, 139, 140, 141, 142, 143, 144, 145
	Types           rule  146
	QualifiedConstElem rules 147, 148
	ListTypes       rules 149, 150
	QualifiedConstant rule  151
	ListQualifiedConstElem rules 152, 153

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 47
	'char'         reduce using rule 47
	'const'        reduce using rule 47
	'double'       reduce using rule 47
	'float'        reduce using rule 47
	'int'          reduce using rule 47
	'typedef'      reduce using rule 47
	'using'        reduce using rule 47
	'void'         reduce using rule 47
	L_Id           reduce using rule 47
	%eof           reduce using rule 47

	Program        goto state 143
	ListDef        goto state 144

State 1


	'bool'         shift, and enter state 48
	'char'         shift, and enter state 49
	'const'        shift, and enter state 126
	'double'       shift, and enter state 50
	'float'        shift, and enter state 51
	'int'          shift, and enter state 52
	'typedef'      shift, and enter state 141
	'using'        shift, and enter state 142
	'void'         shift, and enter state 53
	L_Id           shift, and enter state 41

	Id             goto state 38
	Def            goto state 138
	Decl           goto state 139
	Type           goto state 140
	QualifiedConstElemgoto state 39
	QualifiedConstantgoto state 47
	ListQualifiedConstElemgoto state 43

State 2


	'bool'         reduce using rule 47
	'char'         reduce using rule 47
	'const'        reduce using rule 47
	'double'       reduce using rule 47
	'float'        reduce using rule 47
	'int'          reduce using rule 47
	'typedef'      reduce using rule 47
	'using'        reduce using rule 47
	'void'         reduce using rule 47
	L_Id           reduce using rule 47
	%eof           reduce using rule 47

	ListDef        goto state 137

State 3


	'bool'         shift, and enter state 48
	'char'         shift, and enter state 49
	'const'        shift, and enter state 133
	'double'       shift, and enter state 50
	'float'        shift, and enter state 51
	'int'          shift, and enter state 52
	'void'         shift, and enter state 53
	L_Id           shift, and enter state 41
	%eof           reduce using rule 49

	Id             goto state 38
	ListArg        goto state 135
	Arg            goto state 136
	Type           goto state 132
	QualifiedConstElemgoto state 39
	QualifiedConstantgoto state 47
	ListQualifiedConstElemgoto state 43

State 4


	'!'            reduce using rule 52
	'('            reduce using rule 52
	'*'            reduce using rule 52
	'++'           reduce using rule 52
	'--'           reduce using rule 52
	'bool'         reduce using rule 52
	'char'         reduce using rule 52
	'const'        reduce using rule 52
	'do'           reduce using rule 52
	'double'       reduce using rule 52
	'false'        reduce using rule 52
	'float'        reduce using rule 52
	'for'          reduce using rule 52
	'if'           reduce using rule 52
	'int'          reduce using rule 52
	'return'       reduce using rule 52
	'throw'        reduce using rule 52
	'true'         reduce using rule 52
	'typedef'      reduce using rule 52
	'void'         reduce using rule 52
	'while'        reduce using rule 52
	'{'            reduce using rule 52
	L_integ        reduce using rule 52
	L_doubl        reduce using rule 52
	L_charac       reduce using rule 52
	L_quoted       reduce using rule 52
	L_Id           reduce using rule 52
	%eof           reduce using rule 52

	ListStm        goto state 134

State 5


	'bool'         shift, and enter state 48
	'char'         shift, and enter state 49
	'const'        shift, and enter state 133
	'double'       shift, and enter state 50
	'float'        shift, and enter state 51
	'int'          shift, and enter state 52
	'void'         shift, and enter state 53
	L_Id           shift, and enter state 41

	Id             goto state 38
	Arg            goto state 131
	Type           goto state 132
	QualifiedConstElemgoto state 39
	QualifiedConstantgoto state 47
	ListQualifiedConstElemgoto state 43

State 6


	L_Id           shift, and enter state 41

	Id             goto state 127
	IDecl          goto state 130

State 7


	L_Id           shift, and enter state 41

	Id             goto state 127
	IDecl          goto state 128
	ListIDecl      goto state 129

State 8


	'bool'         shift, and enter state 48
	'char'         shift, and enter state 49
	'const'        shift, and enter state 126
	'double'       shift, and enter state 50
	'float'        shift, and enter state 51
	'int'          shift, and enter state 52
	'void'         shift, and enter state 53
	L_Id           shift, and enter state 41

	Id             goto state 38
	Decl           goto state 125
	Type           goto state 115
	QualifiedConstElemgoto state 39
	QualifiedConstantgoto state 47
	ListQualifiedConstElemgoto state 43

State 9


	'!'            shift, and enter state 85
	'('            shift, and enter state 86
	'*'            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'char'         shift, and enter state 49
	'const'        shift, and enter state 117
	'do'           shift, and enter state 118
	'double'       shift, and enter state 50
	'false'        shift, and enter state 90
	'float'        shift, and enter state 51
	'for'          shift, and enter state 119
	'if'           shift, and enter state 120
	'int'          shift, and enter state 52
	'return'       shift, and enter state 121
	'throw'        shift, and enter state 91
	'true'         shift, and enter state 92
	'typedef'      shift, and enter state 122
	'void'         shift, and enter state 53
	'while'        shift, and enter state 123
	'{'            shift, and enter state 124
	L_integ        shift, and enter state 37
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 41

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 38
	Decl           goto state 112
	Stm            goto state 113
	Exp16          goto state 65
	Exp15          goto state 66
	Exp14          goto state 67
	Exp13          goto state 68
	Exp12          goto state 69
	Exp11          goto state 70
	Exp10          goto state 71
	Exp9           goto state 72
	Exp8           goto state 73
	Exp4           goto state 74
	Exp3           goto state 75
	Exp2           goto state 76
	Exp1           goto state 77
	Exp            goto state 114
	Exp5           goto state 79
	Exp6           goto state 80
	Exp7           goto state 81
	ListString     goto state 83
	Type           goto state 115
	QualifiedConstElemgoto state 39
	QualifiedConstantgoto state 116
	ListQualifiedConstElemgoto state 43

State 10


	'('            shift, and enter state 86
	'false'        shift, and enter state 90
	'true'         shift, and enter state 92
	L_integ        shift, and enter state 37
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 41

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 38
	Exp16          goto state 111
	ListString     goto state 83
	QualifiedConstElemgoto state 39
	QualifiedConstantgoto state 84
	ListQualifiedConstElemgoto state 43

State 11


	'('            shift, and enter state 86
	'false'        shift, and enter state 90
	'true'         shift, and enter state 92
	L_integ        shift, and enter state 37
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 41

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 38
	Exp16          goto state 65
	Exp15          goto state 110
	ListString     goto state 83
	QualifiedConstElemgoto state 39
	QualifiedConstantgoto state 84
	ListQualifiedConstElemgoto state 43

State 12


	'('            shift, and enter state 86
	'false'        shift, and enter state 90
	'true'         shift, and enter state 92
	L_integ        shift, and enter state 37
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 41

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 38
	Exp16          goto state 65
	Exp15          goto state 66
	Exp14          goto state 109
	ListString     goto state 83
	QualifiedConstElemgoto state 39
	QualifiedConstantgoto state 84
	ListQualifiedConstElemgoto state 43

State 13

